fix/logo text alignment

--- a/src/app/logo/logo.component.scss
+++ b/src/app/logo/logo.component.scss
@@ -1,4 +1,23 @@
 .logo-svg {
-  width: 300px;
-  height: 100px;
+  width: 230px;
+  height:70px;
+  border: black solid 1px;
+  float: left;
+  text-align: left;
+  font-family: arial, sans-serif;
+  fill: none;
+
+}
+
+.main {
+  font-family: arial, sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  fill: currentcolor;
+}
+.sub {
+  font-family: arial, sans-serif;
+  font-size: 18px;
+  fill: currentcolor;
+
 }
