--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -10,4 +10,6 @@
   z-index: 2;
   width: 100% !important;
 }
-
+.example-spacer {
+  flex: 1 1 auto;
+}
